--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <button id="test" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="width:200px;height:50px;background-image:url('img/register.png');">會員註冊</button>
                     </div>
                     <!-- other button -->
-                    <button id="register_button" style="display:none" type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">註冊</button>
+                    <button id="register_button" style="display:none" type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">FB註冊</button>
                     <div style="position:fixed; bottom:0px; z-index:0; width:100%">
                         <button id="driver" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="float: left; width:50%; display:none;"><i class="material-icons">&#xE531;</i>司機</button>
                         <button id="passenger" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="float: right; width:50%; display:none;"><i class="material-icons">&#xE536;</i>乘客</button>
@@ -116,7 +116,7 @@
                         <div class="wrapperInside">
                             <div class="dialogContainer">
                                 <div class="dialogContent">
-                                    <div class="dialogContentTitle">會員登入</div>
+                                    <div class="dialogContentTitle" style="text-align: center;">會員登入</div>
                                     <div class="dialogContentBody">
                                         <div class="mdl-textfield mdl-js-textfield" style="width:100%;">
                                             <input id="phone_number" class="mdl-textfield__input " type="tel" maxlength="10">
@@ -142,7 +142,7 @@
                         <div class="wrapperInside">
                             <div class="dialogContainer">
                                 <div class="dialogContent">
-                                    <div class="dialogContentTitle">註冊</div>
+                                    <div class="dialogContentTitle" style="text-align: center;">註冊</div>
                                     <div class="dialogContentBody">
                                         <div style="text-align: center;">
                                             <img id="dialog_image" src="img/circle.png" alt="..." class="img-circle" style="padding: 5px;">
