--- a/about.html
+++ b/about.html
@@ -76,10 +76,10 @@
                     <div>Wheels2go</div>
                     <br/>
                     <div>---VERSION---</div>
-                    <div>v1.0</div>
+                    <div>v1.0.16</div>
                     <br/>
                     <div>---DEVELOPER---</div>
-                    <div>Min-Hsuan, Hu</div>
+                    <div>Chia-Jui, Yeh</div>
                     <div>Ci-Ruei, Jiang</div>
                     <div>Chia-Yu, Huang</div>
                     <div>Shih-Hao, Huang</div>
