--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="dist/js/material.min.js"></script>
     <!-- custom js and css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- [if lt IE 9]>
         <script src="dist/js/html5shiv.js"></script>
     <![endif] -->
@@ -32,8 +32,8 @@
             <div class="mdl-layout__header-row">
                 <!-- Title -->
                 <span class="android-title mdl-layout-title">
-        <a id="dsgr" href="index.html"><img src="assets/logo.png" width="50%"></a>
-         </span>
+                    <a id="dsgr" href="index.html"><img src="assets/logo.png" width="50%"></a>
+                </span>
                 <span class="android-title mdl-layout-title">關於</span>
                 <div class="mdl-layout-spacer"></div>
             </div>
@@ -76,7 +76,7 @@
                     <div>Wheels2go</div>
                     <br/>
                     <div>---VERSION---</div>
-                    <div>v1.0.16</div>
+                    <div>v1.1.16</div>
                     <br/>
                     <div>---DEVELOPER---</div>
                     <div>Chia-Jui, Yeh</div>
@@ -86,10 +86,6 @@
                     <br/>
                     <div>---CONTACT---</div>
                     <div>wheels2goapp@gmail.com</div>
-                    <!-- <div>fake30820@gmail.com</div>
-                    <div>ha9mv8c@gmail.com</div>
-                    <div>happy082807@gmail.com</div>
-                    <div>dt9450108@gmail.com</div> -->
                     <br/>
                     <div>---ADVISOR---</div>
                     <div>Prof. Chow-Sing, Lin</div>
@@ -98,15 +94,15 @@
                     <div>National University of Tainan</div>
                     <div>Data System Laboratory(DSG)</div>
                     <div>http://www.dsg.nutn.edu.tw</div>
+                    <br/>
+                    <br/>
+                </center>
             </div>
-            <br/>
-            <br/>
-            </center>
-    </div>
-    </main>
+        </main>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="dist/js/about.js"></script>
+    <script type="text/javascript" src="dist/js/hammer.js"></script>
 </body>
 
 </html>
