--- a/driver.html
+++ b/driver.html
@@ -14,7 +14,7 @@
     <script src="dist/js/material.min.js"></script>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <!-- custom js and css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- [if lt IE 9]>
         <script src="dist/js/html5shiv.js"></script>
     <![endif] -->
@@ -114,6 +114,7 @@
             </div>
         </main>
     </div>
+    <script src="dist/js/hammer.js "></script>
     <script src="dist/js/dinit.js "></script>
 </body>
 
