--- a/edit.html
+++ b/edit.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="dist/js/material.min.js"></script>
     <!-- custom css and js -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- [if lt IE 9]>
         <script src="dist/js/html5shiv.js"></script>
     <![endif] -->
@@ -93,22 +93,20 @@
                     <div class="mdl-textfield mdl-js-textfield ">
                         <input id="phone" class="mdl-textfield__input " type="tel" maxlength="10">
                         <label class="mdl-textfield__label " for="phone">手機號碼...</label>
-                        <sapn id="register_state" style="color: red; font-size: 12px; margin-top: 3px;">
-                            </span>
+                        <span id="register_state" style="color: red; font-size: 12px; margin-top: 3px;"></span>
                     </div>
                     <div class="mdl-textfield mdl-js-textfield ">
                         <input id="email" class="mdl-textfield__input " type="email">
                         <label class="mdl-textfield__label " for="email">電子郵件...</label>
-                        <sapn id="email_state" style="color: red; font-size: 12px; margin-top: 3px;">
-                            </span>
+                        <span id="email_state" style="color: red; font-size: 12px; margin-top: 3px;"></span>
                     </div>
                 </center>
-
                 <button id="next" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="position:fixed; bottom:0px; z-index:0; width:100%"><i class="material-icons">done</i>確認</button>
             </div>
         </main>
     </div>
     <script type="text/javascript" src="dist/js/edit.js"></script>
+    <script type="text/javascript" src="dist/js/hammer.js"></script>
 </body>
 
 </html>
