--- a/friendlist.html
+++ b/friendlist.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="dist/js/material.min.js"></script>
     <!-- custom js and css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- [if lt IE 9]>
         <script src="dist/js/html5shiv.js"></script>
     <![endif] -->
@@ -72,9 +72,10 @@
                 </div>
             </div>
         </main>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="dist/js/friendlist.js"></script>
     </div>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="dist/js/friendlist.js"></script>
+    <script type="text/javascript" src="dist/js/hammer.js"></script>
 </body>
 
 </html>
