--- a/path.html
+++ b/path.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="dist/js/material.min.js"></script>
     <!-- custom css and js -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <link rel="stylesheet" type="text/css" href="dist/css/carpoolmap.css">
     <!--Google Map-->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
@@ -94,6 +94,7 @@
     <script src="dist/js/path.js"></script>
     <script src="dist/js/pathcompare.js"></script>
     <script src="dist/js/carpoolmap.js"></script>
+    <script src="dist/js/hammer.js"></script>
 </body>
 
 </html>
