--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="dist/js/material.min.js"></script>
     <!-- custom js and css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- custom alert and confirm -->
     <link rel="stylesheet" href="dist/css/alertify.core.css" />
     <link rel="stylesheet" href="dist/css/alertify.default.css" />
@@ -103,8 +103,8 @@
                     </div>
                     <div class="mdl-textfield mdl-js-textfield ">
                         <!-- pattern="^[A-Za-z0-9]+\w{5,11}$" -->
-                        <input id="rpassword" class="mdl-textfield__input " type="text" maxlength="10">
-                        <label class="mdl-textfield__label " for="rpassword">密碼(6~10個字元,由英文與數字組成)</label>
+                        <input id="password" class="mdl-textfield__input " type="text" maxlength="10">
+                        <label class="mdl-textfield__label " for="password">密碼(6~10個字元,由英文與數字組成)</label>
                         <sapn id="p_error" style="color: red; font-size: 12px; margin-top: 3px;">
                             </span>
                     </div>
@@ -124,6 +124,7 @@
         </main>
     </div>
     <script type="text/javascript " src="dist/js/register.js "></script>
+    <script type="text/javascript " src="dist/js/hammer.js "></script>
     <script type="text/javascript " src="dist/js/md5.js "></script>
 </body>
 
