--- a/result.html
+++ b/result.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.1.1/material.min.js"></script>
     <!-- custom css and js -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- Uses a header that contracts as the page scrolls down. -->
     <style>
     .waterfall-demo-header-nav .mdl-navigation__link:last-of-type {
@@ -95,6 +95,7 @@
         </main>
     </div>
     <script src="dist/js/result.js"></script>
+    <script src="dist/js/hammer.js"></script>
 </body>
 
 </html>
