--- a/waiting.html
+++ b/waiting.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="dist/js/material.min.js"></script>
     <!-- custom js and css -->
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- custom alert and confirm -->
     <link rel="stylesheet" href="dist/css/alertify.core.css" />
     <link rel="stylesheet" href="dist/css/alertify.default.css" />
@@ -113,19 +112,17 @@
                         <br/>
                         <!-- END TIMER -->
                     </div>
-                    <!-- <div id="countdown" style="display:none;"></div>
-                    <div id="show_time"></div> -->
                 </center>
             </div>
         </main>
     </div>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script src="dist/js/custom.js"></script>
-    <script src="dist/js/waiting.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="dist/js/hammer.js"></script>
+    <script type="text/javascript" src="dist/js/custom.js"></script>
+    <script type="text/javascript" src="dist/js/waiting.js"></script>
+    <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
     <!--load GCM-->
-    <!-- <script src="dist/js/plugins.js"></script> -->
-    <script src="push.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="dist/js/push.js"></script>
 </body>
 
 </html>
