--- a/board.html
+++ b/board.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="dist/js/material.min.js"></script>
     <!-- custom js and css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- [if lt IE 9]>
         <script src="dist/js/html5shiv.js"></script>
     <![endif] -->
@@ -75,6 +75,7 @@
         </main>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="dist/js/hammer.js"></script>
     <script type="text/javascript" src="dist/js/board.js"></script>
 </body>
 
