--- a/rating.html
+++ b/rating.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- custom css and js -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dist/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
     <script src="dist/js/star-rating.js" type="text/javascript"></script>
@@ -106,6 +106,7 @@
     </div>
     <script src="dist/js/rating.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
+    <script src="dist/js/hammer.js"></script>
 </body>
 
 </html>
