--- a/tracePassengerPage.html
+++ b/tracePassengerPage.html
@@ -14,7 +14,7 @@
     <script src="dist/js/material.min.js"></script>
     <!-- custom css and js -->
     <link rel="stylesheet" href="dist/css/traceSystem.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <!-- custom alert and confirm -->
     <link rel="stylesheet" href="dist/css/alertify.core.css" />
     <link rel="stylesheet" href="dist/css/alertify.default.css" />
@@ -130,11 +130,11 @@
             </div>
         </main>
     </div>
-    <script src="dist/js/tracePassengerClient.js"></script>
+    <script type="text/javascript" src="dist/js/tracePassengerClient.js"></script>
+    <script type="text/javascript" src="dist/js/hammer.js"></script>
     <!--load GCM-->
-    <!-- <script src="dist/js/plugins.js"></script>-->
     <script type="text/javascript" src="cordova.js"></script>
-    <script src="push.js"></script>
+    <script type="text/javascript" src="dist/js/push.js"></script>
 </body>
 
 </html>
